--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,24 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app
+  name: simple-node-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-app
+      app: simple-node-app
   template:
     metadata:
       labels:
-        app: my-app
+        app: simple-node-app
     spec:
       containers:
-      - name: my-app
-        image: nginx:alpine
-        volumeMounts:
-        - name: html
-          mountPath: /usr/share/nginx/html
-      volumes:
-      - name: html
-        configMap:
-          name: html-content
+      - name: node-app
+        image: node:14
+        command: ["node", "-e", "require('http').createServer((req,res)=>res.end('Hello from Node.js!')).listen(3000)"]
+        ports:
+        - containerPort: 3000
+---
+# service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: simple-node-app-service
+spec:
+  selector:
+    app: simple-node-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+  type: LoadBalancer
